[package]
name = "Lattice-d"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "latticed"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
